# hall-of-fame-composer

./: .gitignore  README.md  pyproject.toml
data/: AB_Proposals.txt
hall_of_fame_composer/: categorise.py  gs_projects.py  yaml_projects.py
